// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`features/toc/ui/Menu > filtering > should filter items by text 1`] = `
<nav
  class="_menu_39d40b"
>
  <div
    class="_filter_53599d"
  >
    <div
      class="_input_0d9f86"
    >
      <input
        class="_control_0d9f86"
        placeholder="Filter menu"
        type="text"
      />
    </div>
  </div>
  <ul
    class="_list_7ad75b"
  >
    <li
      aria-level="1"
      class="_item_3b5340"
    >
      <a
        class="_link_3b5340"
        data-discover="true"
        href="/bar.html"
      >
        <span
          class="_text_3b5340"
        >
          <svg
            aria-expanded="true"
            class="_chevron_c80889 _toggle_3b5340 _open_c80889"
            fill="none"
            height="16"
            role="button"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 13 11 8 6 3v9Z"
              fill="currentColor"
            />
          </svg>
          Bar
        </span>
      </a>
    </li>
    <li
      aria-level="2"
      class="_item_3b5340"
    >
      <a
        class="_link_3b5340"
        data-discover="true"
        href="/bar-install.html"
      >
        <span
          class="_text_3b5340"
        >
          Bar: Install
        </span>
      </a>
    </li>
    <li
      aria-level="2"
      class="_item_3b5340"
    >
      <a
        class="_link_3b5340"
        data-discover="true"
        href="/bar-features.html"
      >
        <span
          class="_text_3b5340"
        >
          Bar: Features
        </span>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`features/toc/ui/Menu > loading > should render skeletons while the TOC is loading 1`] = `
<nav
  class="_menu_39d40b"
>
  <div
    class="_filter_53599d"
  >
    <span
      class="_skeleton_8ca799"
    />
  </div>
  <ul
    class="_list_7ad75b"
  >
    <li
      aria-level="1"
      class="_item_3b5340"
    >
      <span
        class="_link_3b5340 _disabled_3b5340"
      >
        <span
          class="_text_3b5340"
        >
          <span
            class="_skeleton_8ca799 _loader_3b5340"
          />
        </span>
      </span>
    </li>
    <li
      aria-level="2"
      class="_item_3b5340"
    >
      <span
        class="_link_3b5340 _disabled_3b5340"
      >
        <span
          class="_text_3b5340"
        >
          <span
            class="_skeleton_8ca799 _loader_3b5340"
          />
        </span>
      </span>
    </li>
    <li
      aria-level="2"
      class="_item_3b5340"
    >
      <span
        class="_link_3b5340 _disabled_3b5340"
      >
        <span
          class="_text_3b5340"
        >
          <span
            class="_skeleton_8ca799 _loader_3b5340"
          />
        </span>
      </span>
    </li>
    <li
      aria-level="1"
      class="_item_3b5340"
    >
      <span
        class="_link_3b5340 _disabled_3b5340"
      >
        <span
          class="_text_3b5340"
        >
          <span
            class="_skeleton_8ca799 _loader_3b5340"
          />
        </span>
      </span>
    </li>
    <li
      aria-level="1"
      class="_item_3b5340"
    >
      <span
        class="_link_3b5340 _disabled_3b5340"
      >
        <span
          class="_text_3b5340"
        >
          <span
            class="_skeleton_8ca799 _loader_3b5340"
          />
        </span>
      </span>
    </li>
  </ul>
</nav>
`;

exports[`features/toc/ui/Menu > render > should build a menu and highlight the current page 1`] = `
<nav
  class="_menu_39d40b"
>
  <div
    class="_filter_53599d"
  >
    <div
      class="_input_0d9f86"
    >
      <input
        class="_control_0d9f86"
        placeholder="Filter menu"
        type="text"
      />
    </div>
  </div>
  <ul
    class="_list_7ad75b"
  >
    <li
      aria-level="1"
      class="_item_3b5340"
    >
      <a
        class="_link_3b5340 _active_3b5340"
        data-discover="true"
        href="/bar.html"
      >
        <span
          class="_text_3b5340"
        >
          Bar
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_3b5340"
    >
      <a
        class="_link_3b5340"
        data-discover="true"
        href="/baz.html"
      >
        <span
          class="_text_3b5340"
        >
          Baz
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_3b5340"
    >
      <a
        class="_link_3b5340"
        data-discover="true"
        href="/foo.html"
      >
        <span
          class="_text_3b5340"
        >
          Foo
        </span>
      </a>
    </li>
  </ul>
</nav>
`;
